--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   auto_size_text: ^3.0.0
+  spotify: ^0.12.0
+  spotify_sdk: ^2.3.1
+  http: ^1.1.0
+  crypto: ^3.0.3
+  flutter_web_auth: ^0.5.0
+  url_launcher: ^6.2.1
+  shelf: ^1.4.1
+  shelf_proxy: ^1.0.4
+  shelf_router: ^1.1.4
+  webview_flutter: ^4.4.2
 
 dev_dependencies:
   flutter_test:
