--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -16,5 +16,5 @@ pluginManagement {
 }
 
 include ":app"
-
+include ':spotify-app-remote'
 apply from: "${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle/app_plugin_loader.gradle"
