--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   webview_flutter: ^4.4.2
   shared_preferences: ^2.2.2
   provider: ^6.1.1
+  pkce: ^1.1.0+1
 
 dev_dependencies:
   flutter_test:
