--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shared_preferences: ^2.2.2
   provider: ^6.1.1
   pkce: ^1.1.0+1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
