--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,19 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  auto_size_text: ^3.0.0
   http: ^1.1.0
-  crypto: ^3.0.3
   flutter_web_auth: ^0.5.0
   url_launcher: ^6.2.1
-  shelf: ^1.4.1
-  shelf_proxy: ^1.0.4
-  shelf_router: ^1.1.4
-  webview_flutter: ^4.4.2
   shared_preferences: ^2.2.2
   provider: ^6.1.1
   pkce: ^1.1.0+1
-  shimmer: ^3.0.0
+  flutter_native_splash: ^2.3.6
 
 dev_dependencies:
   flutter_test:
