--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,8 +4,7 @@
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
 
     <application
-        android:label="sound_trends"
-        android:icon="@mipmap/ic_launcher">
+        android:label="SoundTrends">
         <activity
             android:name=".MainActivity"
             android:exported="true"
